[package]
name = "crawler"
version = "0.1.0"
authors = ["Leonard Kriese <leonard.kriese@turbinekreuzberg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.7"
tokio = { version = "0.2", features = ["macros"] }